--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^1.0.6",
+    "@mui/material": "^7.3.5",
+    "@mui/x-date-pickers": "^8.18.0",
     "@tailwindcss/vite": "^4.1.17",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.17"
