--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
+    "react-clock": "^6.0.0",
     "react-dom": "^19.2.0",
+    "react-time-picker": "^8.0.2",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
