--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.3.5",
     "@mui/x-date-pickers": "^8.18.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
@@ -39,20 +40,20 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/browser-playwright": "^4.0.13",
+    "@vitest/coverage-v8": "^4.0.13",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-storybook": "^10.0.8",
     "globals": "^16.5.0",
+    "playwright": "^1.56.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "prop-types": "^15.8.1",
     "storybook": "^10.0.8",
     "vite": "^7.2.2",
     "vite-plugin-svgr": "^4.5.0",
-    "vitest": "^4.0.13",
-    "playwright": "^1.56.1",
-    "@vitest/browser-playwright": "^4.0.13",
-    "@vitest/coverage-v8": "^4.0.13"
+    "vitest": "^4.0.13"
   }
 }
