--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.2.0",
     "react-clock": "^6.0.0",
     "react-dom": "^19.2.0",
+    "react-onesignal": "^3.4.0",
     "react-swipeable": "^7.0.2",
     "react-time-picker": "^8.0.2",
     "tailwindcss": "^4.1.17"
